Auto stash before rebase of "odjaramilloz/master"

--- a/TEMA-2/Clase17_PruebasDeBondadYAjuste.ipynb
+++ b/TEMA-2/Clase17_PruebasDeBondadYAjuste.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +154,13 @@
     "print('Con una confianza de %2.2f la media estará en el intervalo t,\\n %s' %(confianza,i1))\n",
     "print('Con una confianza de %2.2f la media estará en el intervalo normal,\\n %s' %(confianza,i2))\n",
     "print('Media calculada' ,np.mean(X))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color='midnightblue'> Pruebas de Hipótesis"
    ]
   },
   {
@@ -469,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -547,7 +554,7 @@
        "total_empleados     100     120      90         110  420.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +570,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>noreste</th>\n",
+       "      <th>sureste</th>\n",
+       "      <th>central</th>\n",
+       "      <th>costa_oeste</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>M_actual</th>\n",
+       "      <td>68</td>\n",
+       "      <td>75</td>\n",
+       "      <td>57</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M_nuevo</th>\n",
+       "      <td>32</td>\n",
+       "      <td>45</td>\n",
+       "      <td>33</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         noreste sureste central costa_oeste\n",
+       "M_actual      68      75      57          79\n",
+       "M_nuevo       32      45      33          31"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[data.index!='total_empleados',data.columns!='total']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "noreste        100\n",
+       "sureste        120\n",
+       "central         90\n",
+       "costa_oeste    110\n",
+       "Name: total_empleados, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[-1,:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "noreste        66.4286\n",
+       "sureste        79.7143\n",
+       "central        59.7857\n",
+       "costa_oeste    73.0714\n",
+       "Name: total_empleados, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[-1,:-1]*P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "noreste        33.5714\n",
+       "sureste        40.2857\n",
+       "central        30.2143\n",
+       "costa_oeste    36.9286\n",
+       "Name: total_empleados, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[-1,:-1]*(1-P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +720,7 @@
        " array([68, 75, 57, 79, 32, 45, 33, 31], dtype=object))"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -616,6 +761,49 @@
     "Ji = st.chi2.ppf(q = 0.9,df=3)\n",
     "print('Estadístico de Ji = ',Ji)\n",
     "# st.t.interval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([68, 75, 57, 79, 32, 45, 33, 31], dtype=object),\n",
+       " array([66.42857142857143, 79.71428571428571, 59.785714285714285,\n",
+       "        73.07142857142857, 33.57142857142858, 40.28571428571429,\n",
+       "        30.214285714285715, 36.92857142857143], dtype=object))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F_obse,F_espe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((8,), (8,))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F_obse.shape,F_espe.shape "
    ]
   },
   {
